[tool.poetry]
name = "image-upscaler"
version = "0.1.0"
description = ""
authors = ["Eric Thiebaut-George <github@dungorm.com>"]
readme = "README.md"
packages = [{include = "image_upscaler"}]

[tool.poetry.dependencies]
python = "^3.9"
super-image = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
